syntax = "proto3";

package apiNameNode;

option go_package = "/apiNameNode";

service NameNode{
    rpc EscribirJugada (JugadaJugador) returns (Signal) {}
    rpc PedirJugadasJugador (Jugador) returns (TodasLasJugadas) {}
}

message JugadaJugador {
    int32 IdJugador = 1;
    int32 Jugada = 2;
    int32 Etapa = 3;
}

message Signal{
    bool Sign = 1;
}

message Jugador{
    int32 IdJugador = 1;
}

message TodasLasJugadas {
    string  JugadasJugador = 1;
}